 * Added scripts to support archiving db tables (#1071)
 * Fix grammar and a typo in certificate renewal (#1072)
 * Update LabWiki URL (#1073)
 * Use pushstate history for profile tabs (#1074)
 * Update to omni 2.6 (#1078)
 * Renamed generated SSH keypair filename in omni bundle
   if it would conflict with another file in the bundle. (#1063)

== 2.16.7 ==
 * Update the LabWiki URL (#1073)

== 2.16.6 ==
 * Fix for slice page not defaulting to This Slice on Safari (#1067)

== 2.16.5 ==
 * Band-aid for sliver status failure. Partial fix for (#1000)

== 2.16.4 ==
 * Fix bug on slice page where the date picker would reset to the default date. (#1064)

== 2.16.3 ==
 * Put up an Orbit logo on the WiMAX page for people to use their new WiMAX account. (#1062)

== 2.16.2 ===
 * Fix a timeout bug by increasing buffer and decreasing sleep (#1060)

== 2.16.1 ===
 * Enable the WiMAX page for all users. (#1015)

== 2.16 ==
 * Allow editing RSpec properties (requires DB update). (#226)
 * Revamped slice page with all new table of aggregates to act on and
   action buttons only on that table. (#1038)
  * Slice page: actions on selected aggregates only (#958)
  * Support selecting aggregates where the slice has resources (#762)
  * Implemented `Add` button per aggregate on slice page (#1042)
  * Made a few fixes to the slice page (#1047)
  * Added `Renew Slice and Known Resources` to slice page (#1048)
  * Updated text under `Slice Members` on slice page (#1050)
  * Fixed issue with table-level calendar showing under other elements (#1057)
 * Fix insecure content warning on profile page (#1026)
 * Added Hide option for `Raw Resource Specification` on listresources (#1030)
 * Fixed php errors on listresources and slice pages (#1031)
 * Remove problematic mail headers (#1039)
 * Update dragon.maxgigapop SSL cert (again). (#1040)
 * Change WiMAX base URL (#1045)
 * Make project names and ids match on wimax enable page (#1049)